# riviera

./: .gitignore  Cargo.toml  README.md
src/: bus.rs  cli.rs  cpu.rs  elf.rs  emulator.rs  main.rs  memory.rs  rv.rs  uart.rs
tests/: compile.sh
tests/bubblesort/: Makefile  main.c
tests/lfsr/: lfsr.c  lfsr.h
tests/quicksort/: Makefile  main.c
